[tool.poetry]
name = "nppes"
version = "0.1.0"
description = ""
authors = ["Jason Turan <jason.turan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^2.1.4"
pandas = "^1.0.5"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
