[tool.poetry]
name = "nppes"
version = "0.1.3"
description = "Package to interface with the Center for Medicare and Medicaid's (CMS) National Plan and Provider Enumeration System (NPPES)."
authors = ["Jason Turan <jason.turan@gmail.com>", "Adrienne Franke <adriennefranke@gmail.com>"]
documentation = "https://github.com/jturan/nppes"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
click = "^7.1.2"
Pygments = "^2.6.1"
pandas = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^2.1.4"
pandas = "^1.0.5"
coverage = {extras = ["toml"], version = "^5.2"}
pytest-cov = "^2.10.0"
notebook = "^6.1.4"
pytest-mock = "^3.2.0"

[tool.poetry.scripts]
search_nppes_api = "nppes.search:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
